<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pet_list_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/layout_padding"
        android:paddingEnd="@dimen/layout_padding">

        <!--  Chat/Call Buttons  -->
        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:orientation="horizontal">

            <Button
                android:id="@+id/call_btn"
                style="@style/App.Button.Big"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/call"
                app:backgroundTint="@color/call_btn_background" />

            <Space
                android:id="@+id/button_spacer"
                android:layout_width="@dimen/block_padding"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/chat_btn"
                style="@style/App.Button.Big"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/chat"
                app:backgroundTint="@color/chat_btn_background" />

        </LinearLayout>

        <!--  Working hours  -->
        <TextView
            android:id="@+id/working_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:background="@drawable/working_hours_background"
            android:gravity="center"
            android:padding="@dimen/default_padding"
            android:textAppearance="@style/App.TextAppearance.WorkingHours"
            android:visibility="gone"
            tools:text="Office Hours: M-F 10:00 - 18:00"
            tools:visibility="visible" />

        <!--  Pet list  -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pet_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="7"
            tools:listitem="@layout/recyclerview_pet_item" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/errors_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error_fetching"
            android:textAppearance="@style/App.TextAppearance.Error"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/retryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:gravity="center"
            android:text="@string/retry"
            android:textAppearance="@style/App.TextAppearance.Error" />

    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        tools:indeterminate="false"
        tools:progress="86"
        tools:visibility="visible" />


</FrameLayout>