<?xml version="1.0" encoding="utf-8"?>
<androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:name="com.vetclinic.app.ui.list.PetListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="PetListFragment"
    tools:viewBindingIgnore="true" />